Unpredictable Library Override Collection Behavior on Updating/Relocating a Linked Library #86883

Closed
opened 2021-03-24 11:15:54 +01:00 by Tristan · 8 comments

System Information
Operating system: Linux-5.4.0-67-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.39

Blender Version
Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: 02948a2cab
Worked: NA

Short description of error
Upon updating an asset (either through the Outliner "Relocate" operator or exchanging the source file), any Library Override collection with simple hierarchical changes (new nested collections, new objects, changed names) will fail to replicate the structure of the source collection and show a variety of unpredictable outcomes; e.g. duplicate collections, duplicate objects, missing collections, missing objects, missing override pointers, etc.

Exact steps for others to reproduce the error
Extract attached .blend file
suzanne_local_override.zip

  • Open "sh010_animation_v001.blend".
  • Navigate to the Outliner in "Blender File" mode, find the linked library "//CHR-suz_v001.blend"
  • Right click, "Relocate" to "//CHR-suz_v002.blend" in the same folder. (Alternatively, rename the v002 file to v001 and Revert)
  • The Library Override will not be properly updated.

I also noticed that local constraints on Pose Bones are built before new constraints that may have been added to the source Armature;
In my experience, local constraints should always be added after the armature's "internal" constraints.

I'm assuming this is the designated way to update assets. Are library overrides not meant to be viable in this way?
In production, we usually start with "crude" character rigs for the layout department and update them to be more detailed over the course of the film, creating many more collections and objects. Updates like this should be supported by Library Overrides without rebuilding the whole shot from scratch; especially when layout artists/animators already created complex constraints/interactions between assets that need to be carried over.

**System Information** Operating system: Linux-5.4.0-67-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.39 **Blender Version** Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: `02948a2cab` Worked: NA **Short description of error** Upon updating an asset (either through the Outliner "Relocate" operator or exchanging the source file), any Library Override collection with simple hierarchical changes (new nested collections, new objects, changed names) will fail to replicate the structure of the source collection and show a variety of unpredictable outcomes; e.g. duplicate collections, duplicate objects, missing collections, missing objects, missing override pointers, etc. **Exact steps for others to reproduce the error** Extract attached .blend file [suzanne_local_override.zip](https://archive.blender.org/developer/F9906869/suzanne_local_override.zip) - Open "sh010_animation_v001.blend". - Navigate to the Outliner in "Blender File" mode, find the linked library "//CHR-suz_v001.blend" - Right click, "Relocate" to "//CHR-suz_v002.blend" in the same folder. (Alternatively, rename the v002 file to v001 and Revert) - The Library Override will not be properly updated. I also noticed that local constraints on Pose Bones are built **before** new constraints that may have been added to the source Armature; In my experience, local constraints should always be added **after** the armature's "internal" constraints. I'm assuming this is the designated way to update assets. Are library overrides not meant to be viable in this way? In production, we usually start with "crude" character rigs for the layout department and update them to be more detailed over the course of the film, creating many more collections and objects. Updates like this should be supported by Library Overrides without rebuilding the whole shot from scratch; especially when layout artists/animators already created complex constraints/interactions between assets that need to be carried over.
Author

Added subscriber: @Plyro

Added subscriber: @Plyro
Tristan changed title from Unpredictable Local Override Collection Behavior on Updating/Relocating a Linked Library to Unpredictable Library Override Collection Behavior on Updating/Relocating a Linked Library 2021-03-24 11:20:51 +01:00

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Thanks for the report, I can confirm.
You have to reload the //CHR-suz_v002.blend lib for an complete relocation (apparently).
The console did not show anything abnormal, so I am confirming the bug.

Thanks for the report, I can confirm. You have to reload the `//CHR-suz_v002.blend` lib for an complete relocation (apparently). The console did not show anything abnormal, so I am confirming the bug.

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2021-03-29 11:06:35 +02:00

Hrmm, this should likely use auto-resync as well... more like a todo than a bug though, this workflow has not really been tested yet.

Hrmm, this should likely use auto-resync as well... more like a todo than a bug though, this workflow has not really been tested yet.

This issue was referenced by 5225e459da

This issue was referenced by 5225e459da07b10b5d1a77f74fed2d3df1fee594

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 3.0 milestone 2023-02-08 15:59:28 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86883
No description provided.