Fix T86883: Add/fix suport of liboverrides in relocate/reload library case.

There was already some code for that, but it was broken, and proper
resync was completely missing.

There might still be more resync needed in library linking operators
though.